--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <link href="css/reset.css" rel="stylesheet" />
+  <script src="scripts/main.js" defer />
 </head>
 <body>
   <p>test</p>
