--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <link href="css/reset.css" rel="stylesheet" />
   <link href="css/base.css" rel="stylesheet" />
-  <script src="scripts/main.js" defer />
+  <script src="scripts/main.js" defer /></script>
 </head>
 <body>
   <p>test</p>
