do be do be do ba

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <datalist id="items"></datalist> <!-- this is modified when we get data in javascript -->
     <input type="button" onclick="checkItem()" value="Check Item">
   </header>
-  <article>
+  <article id="main-article-section">
     <div></div>
   </article>
   <footer>
     <h1><em>a Crompter project</em></h1>
+    <h1>Sprites sourced from <a href="https://www.spriters-resource.com/pc_computer/growtopia/sheet/133966/">www.spriters-resource.com</a></h1>
   </footer>
 </body>
